flow: remove leading/trailing quotes from page title override (#1202)